Sync doc with 2025.05
Signed-off-by: Stefano Babic <stefano.babic@swupdate.org>

--- a/sw-description.html
+++ b/sw-description.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" /><meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>SWUpdate: syntax and tags with the default parser &mdash; Embedded Software Update Documentation 2024.12 documentation</title>
+  <title>SWUpdate: syntax and tags with the default parser &mdash; Embedded Software Update Documentation 2025.05 documentation</title>
       <link rel="stylesheet" type="text/css" href="_static/pygments.css?v=fa44fd50" />
       <link rel="stylesheet" type="text/css" href="_static/css/theme.css?v=86f27845" />
 
@@ -13,7 +13,7 @@
   
         <script src="_static/jquery.js?v=8dae8fb0"></script>
         <script src="_static/_sphinx_javascript_frameworks_compat.js?v=2cd50e6c"></script>
-        <script src="_static/documentation_options.js?v=426f823e"></script>
+        <script src="_static/documentation_options.js?v=ffeffead"></script>
         <script src="_static/doctools.js?v=888ff710"></script>
         <script src="_static/sphinx_highlight.js?v=dc90522c"></script>
     <script src="_static/js/theme.js"></script>
@@ -35,7 +35,7 @@
             Embedded Software Update Documentation
           </a>
               <div class="version">
-                2024.12
+                2025.05
               </div>
 <div role="search">
   <form id="rtd-search-form" class="wy-form" action="search.html" method="get">
@@ -216,7 +216,7 @@ using of the #include directive is not allowed by SWUpdate.</p>
                         <span class="n">filename</span> <span class="o">=</span> <span class="s2">&quot;README&quot;</span><span class="p">;</span>
                         <span class="n">path</span> <span class="o">=</span> <span class="s2">&quot;/README&quot;</span><span class="p">;</span>
                         <span class="n">device</span> <span class="o">=</span> <span class="s2">&quot;/dev/mmcblk0p1&quot;</span><span class="p">;</span>
-                        <span class="n">filesystem</span> <span class="o">=</span> <span class="s2">&quot;vfat&quot;</span>
+                        <span class="n">filesystem</span> <span class="o">=</span> <span class="s2">&quot;vfat&quot;</span><span class="p">;</span>
                 <span class="p">}</span>
         <span class="p">);</span>
 
@@ -238,7 +238,7 @@ using of the #include directive is not allowed by SWUpdate.</p>
                 <span class="p">},</span>
                 <span class="p">{</span>
                         <span class="n">name</span> <span class="o">=</span> <span class="s2">&quot;addfb&quot;</span><span class="p">;</span>
-                        <span class="n">value</span> <span class="o">=</span> <span class="s2">&quot;setenv bootargs $</span><span class="si">{bootargs}</span><span class="s2"> omapfb.vram=1:2M,2:2M,3:2M omapdss.def_disp=lcd&quot;</span>
+                        <span class="n">value</span> <span class="o">=</span> <span class="s2">&quot;setenv bootargs $</span><span class="si">{bootargs}</span><span class="s2"> omapfb.vram=1:2M,2:2M,3:2M omapdss.def_disp=lcd&quot;</span><span class="p">;</span>
                 <span class="p">}</span>
         <span class="p">);</span>
 <span class="p">}</span>
@@ -1578,7 +1578,7 @@ update will fail with an error.</p></td>
   <hr/>
 
   <div role="contentinfo">
-    <p>&#169; Copyright 2013-2024, Stefano Babic.</p>
+    <p>&#169; Copyright 2013-2025, Stefano Babic.</p>
   </div>
 
   Built with <a href="https://www.sphinx-doc.org/">Sphinx</a> using a
