revert changes for system restart messages - not resolved.

--- a/web-app/index.html
+++ b/web-app/index.html
@@ -99,7 +99,7 @@
                 <i class="fas fa-check-circle"></i> 
                 <div>
                   <strong>Update Completed Successfully</strong><br>
-                  <span class="small">The software update has been applied successfully. No restart required.</span>
+                  <span class="small">The software update has been applied successfully.</span>
                 </div>
               </div>
               <div id="swu-failure" class="alert alert-danger" style="display: none;">
